--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Install pip requirements
-      - name: Run a one-line script
+      - name: Install pip requirements
         run: pip install -r requirements.txt
 
       # Runs a set of commands using the runners shell
