--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,19 +17,28 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  lint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
 
-      # Install pip requirements
-      - name: Install pip requirements
-        run: pip install -r requirements.txt
+    # Install pip requirements
+    - name: Install pip requirements
+      run: pip install -r requirements.txt
 
-      # Runs a set of commands using the runners shell
-      - name: Execute ansible-lint
-        run: ansible-lint .
+    # Runs a set of commands using the runners shell
+    - name: Execute ansible-lint
+      run: ansible-lint .
+
+  build:
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+    - name: Test Ansible location
+      run: which ansible-playbook
+
