--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -42,3 +42,6 @@ jobs:
     - name: Test Ansible location
       run: which ansible-playbook
 
+    - name: Test playbook
+      run: ansible-playbook --connection=local 127.0.0.1 playbook.yml
+
