--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,7 +28,7 @@ jobs:
 
     # Install pip requirements
     - name: Install pip requirements
-      run: pip install -r requirements.txt
+      run: pip3 install -r requirements.txt
 
     # Runs a set of commands using the runners shell
     - name: Execute ansible-lint
